--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" href="assets/imgs/icono.ico" />
     <link rel="stylesheet" href="assets/css/main.css"/>
 </head>
@@ -22,33 +23,33 @@
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Artículo</label>
                     <input type="text" name="articulo" class="form-control" 
-                    id="articulo" placeholder="Enter product name">
+                    id="articulo" placeholder="Ingresa nombre del artículo">
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Cantidad</label>
                     <input type="number" name="cantidad" class="form-control" 
-                    id="cantidad" value="0" placeholder="Enter the incomings of the product">
+                    id="cantidad" value="0">
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Precio</label>
                     <input type="text" name="precio" class="form-control" 
-                    id="precio" value="0" placeholder="Enter the price" oninput="formatInputPrice(this)">                    
+                    id="precio" value="0" oninput="formatInputPrice(this)">                    
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Proveedor</label>
                     <input type="text" name="proveedor" class="form-control" 
-                    id="proveedor" placeholder="Enter the supplier">
+                    id="proveedor" placeholder="Ingresa nombre del proveedor">
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Fecha</label>
                     <input type="date" name="fecha" class="form-control" 
-                    id="fecha" placeholder="Enter the date">
+                    id="fecha">
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="categoria">Categoría</label>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownCategoria" data-bs-toggle="dropdown" aria-expanded="false">
-                            Seleccionar Categoría
+                            <i class="bi bi-menu-up"></i> Seleccionar Categoría
                         </button>
                         <ul class="dropdown-menu multi-column-dropdown" aria-labelledby="dropdownCategoria">
                             <div class="row">
@@ -111,19 +112,23 @@
                 <input type="hidden" name="categoria" id="categoria">
 
                 <div class="col-lg-12 d-flex justify-content-between align-items-center">
-                    <button class="btn btn-success" id="Submit" onclick="AddData()">Añadir registro</button>
+                    <button class="btn btn-success" id="Submit" onclick="AddData()">
+                        <i class="bi bi-file-plus"></i> Añadir registro
+                    </button>
                     <div>
-                        <button class="btn btn-primary" id="Update">Actualizar</button>
+                        <button class="btn btn-primary" id="Update">
+                        <i class="bi bi-arrow-clockwise"></i> Actualizar
+                        </button>
                     </div>
                 </div>
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        Opciones
+                        <i class="bi bi-sliders2"></i> Opciones
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="exportToExcel()">Exportar a Excel</a></li>
-                        <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="exportToJSON()">Guardar respaldo</a></li>
-                        <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="document.getElementById('fileInput').click()">Cargar un respaldo</a></li>
+                        <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="exportToExcel()"><i class="bi bi-file-earmark-spreadsheet"></i> Exportar a Excel</a></li>
+                        <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="exportToJSON()"><i class="bi bi-arrow-down"></i> Guardar respaldo</a></li>
+                        <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="document.getElementById('fileInput').click()"><i class="bi bi-arrow-up"></i> Cargar un respaldo</a></li>
                     </ul>
                 </div>
                 <input type="file" id="fileInput" class="d-none" onchange="importFromJSON(event)">                             
