--- a/index.html
+++ b/index.html
@@ -113,13 +113,18 @@
 
                 <div class="col-lg-12 d-flex justify-content-between align-items-center">
                     <button class="btn btn-success" id="Submit" onclick="AddData()">
-                        <i class="bi bi-file-plus"></i> Añadir registro
+                        <i class="bi bi-file-plus"></i> Añadir Registro
                     </button>
                     <div>
                         <button class="btn btn-primary" id="Update">
                         <i class="bi bi-arrow-clockwise"></i> Actualizar
                         </button>
                     </div>
+                    <div class="btn-group d-flex justify-content-end mt-3" role="group" aria-label="Controles graficos">
+                        <a href="grafico.html" class="btn btn-success"><i class="bi bi-bar-chart"></i> Ver Balance</a>
+                        <a href="dashboard.html" class="btn btn-primary"><i class="bi bi-bar-chart"></i> Estadísticas</a>
+                      </div>
+
                 </div>
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
@@ -180,6 +185,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-gauge@0.1.7/dist/chartjs-gauge.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
