--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Registro de transacciones">
     <meta name="author" content="Lextrack">
-    <title>Gestor de transacciones</title>
+    <title>Gestor de transacciones v1.0.9<</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
@@ -104,6 +104,7 @@
                                     <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="selectCategoria('Vacaciones')">Vacaciones</a></li>
                                     <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="selectCategoria('Viaticos y pasajes')">Viaticos y pasajes</a></li>
                                     <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="selectCategoria('Wifi - internet')">Wifi - internet</a></li>
+                                    <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="selectCategoria('Otro')">Otro</a></li>
                                 </div>
                             </div>
                         </ul>                                                                                      
@@ -121,7 +122,7 @@
                         </button>
                     </div>
                     <div class="btn-group d-flex justify-content-end mt-3" role="group" aria-label="Controles graficos">
-                        <a href="grafico.html" class="btn btn-success"><i class="bi bi-bar-chart"></i> Ver Balance</a>
+                        <a href="balance.html" class="btn btn-success"><i class="bi bi-bar-chart"></i> Ver Balance</a>
                         <a href="dashboard.html" class="btn btn-primary"><i class="bi bi-bar-chart"></i> Estadísticas</a>
                       </div>
 
@@ -177,7 +178,7 @@
     <footer>
         <div class="container pt-5">
           &copy;
-          <script>document.write(new Date().getFullYear())</script>. Creado por <a href="https://github.com/lextrack" target="_blank">Ariel Alejandro (Lextrack)</a>
+          <script>document.write(new Date().getFullYear())</script>. Creado por <a href="https://github.com/lextrack/GestorResgistrosJS" target="_blank">Ariel Alejandro (Lextrack)</a>
         </div>
     </footer>
 
