--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Registro de transacciones">
     <meta name="author" content="Lextrack">
-    <title>Gestor de transacciones v1.0.9<</title>
+    <title>Gestor de transacciones v1.1.0</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="h2 pb-2 mb-4 text-info text-center border-bottom border-info mt-3 md-3">
+        <div class="h2 pb-2 mb-4 text-center border-bottom border-info mt-3 md-3">
             Gestor de transacciones
           </div>
         <div class="md-5">
@@ -173,10 +173,10 @@
             </div>
         </div>
     </div>
-    <div id="pagination" class="pagination justify-content-center gap-1"></div>
+    <div id="pagination" class="pagination justify-content-center gap-1 pt-3"></div>
     <br>
     <footer>
-        <div class="container pt-5">
+        <div class="container pt-3">
           &copy;
           <script>document.write(new Date().getFullYear())</script>. Creado por <a href="https://github.com/lextrack/GestorResgistrosJS" target="_blank">Ariel Alejandro (Lextrack)</a>
         </div>
@@ -185,9 +185,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-gauge@0.1.7/dist/chartjs-gauge.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
