--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Registro de transacciones">
     <meta name="author" content="Lextrack">
-    <title>Gestor de transacciones v1.1.0</title>
+    <title>Gestor de transacciones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
@@ -173,10 +173,10 @@
             </div>
         </div>
     </div>
-    <div id="pagination" class="pagination justify-content-center gap-1 pt-3"></div>
+    <div id="pagination" class="pagination justify-content-center gap-1 pt-3 mt-3"></div>
     <br>
     <footer>
-        <div class="container pt-3">
+        <div class="container pt-3 mt-3">
           &copy;
           <script>document.write(new Date().getFullYear())</script>. Creado por <a href="https://github.com/lextrack/GestorResgistrosJS" target="_blank">Ariel Alejandro (Lextrack)</a>
         </div>
