--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" href="assets/imgs/icono.ico" />
     <link rel="stylesheet" href="assets/css/main.css"/>
@@ -41,9 +42,9 @@
                     id="proveedor" placeholder="Ingresa nombre del proveedor">
                 </div>
                 <div class="form-group col-md-6 mb-3">
-                    <label for="name">Fecha</label>
-                    <input type="date" name="fecha" class="form-control" 
-                    id="fecha">
+                    <label for="name">Duración</label>
+                    <input type="date" name="duracion" class="form-control" 
+                    id="duracion">
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="categoria">Categoría</label>
@@ -158,10 +159,10 @@
                             <th class="titles">Artículo</th>
                             <th class="titles">Cantidad</th>
                             <th class="titles">Precio</th>
-                            <th class="titles">Total</th>
                             <th class="titles">Proveedor</th>
-                            <th class="titles">Fecha</th>
                             <th class="titles">Categoría</th>
+                            <th class="titles">Duración</th>
+                            <th class="titles">Total</th>
                             <th class="titles">Acciones</th>
                         </tr>
                     </thead>
@@ -182,10 +183,11 @@
         </div>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
