--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Duración</label>
-                    <input type="date" name="duracion" class="form-control" 
+                    <input type="text" name="duracion" class="form-control" 
                     id="duracion">
                 </div>
                 <div class="form-group col-md-6 mb-3">
@@ -137,6 +137,17 @@
                         <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="exportToJSON()"><i class="bi bi-arrow-down"></i> Guardar respaldo</a></li>
                         <li><a class="dropdown-item custom-dropdown-item" href="#" onclick="document.getElementById('fileInput').click()"><i class="bi bi-arrow-up"></i> Cargar un respaldo</a></li>
                     </ul>
+                </div>
+                <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="toast-header">
+                            <img src="assets/imgs/icono.ico" class="rounded me-2" width="20" height="20">
+                            <strong class="me-auto"></strong>
+                            <small>Ahora</small>
+                            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                        </div>
+                        <div class="toast-body"></div>
+                    </div>
                 </div>
                 <input type="file" id="fileInput" class="d-none" onchange="importFromJSON(event)">                             
                 <div class="form-group col-md-6 mb-3">
