--- a/balance.html
+++ b/balance.html
@@ -10,8 +10,8 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="icon" href="assets/imgs/icono.ico" />
-    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="icon" href="imgs/icono.ico" />
+    <link rel="stylesheet" href="css/main.css"/>
     <style>
         .chart-container {
             position: relative;
@@ -53,6 +53,6 @@
     <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.13/dist/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.umd.js.map"></script>
-    <script src="assets/js/balance.js"></script>
+    <script src="js/balance.js"></script>
 </body>
 </html>
