--- a/dashboard.html
+++ b/dashboard.html
@@ -10,8 +10,8 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="icon" href="assets/imgs/icono.ico" />
-    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="icon" href="imgs/icono.ico" />
+    <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
     <div class="container">
@@ -62,6 +62,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-labels@1.1.0/dist/chartjs-plugin-labels.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="assets/js/dashboard.js"></script>
+    <script src="js/dashboard.js"></script>
 </body>
 </html>
