--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="icon" href="assets/imgs/icono.ico" />
-    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="icon" href="imgs/icono.ico" />
+    <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
     <div class="container">
@@ -141,7 +141,7 @@
                 <div class="toast-container position-fixed bottom-0 end-0 p-3">
                     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                         <div class="toast-header">
-                            <img src="assets/imgs/icono.ico" class="rounded me-2" width="20" height="20">
+                            <img src="/imgs/icono.ico" class="rounded me-2" width="20" height="20">
                             <strong class="me-auto"></strong>
                             <small>Ahora</small>
                             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -199,6 +199,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
