--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="icon" href="imgs/icono.ico" />
+    <link rel="icon" href="img/icono.ico" />
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
@@ -141,7 +141,7 @@
                 <div class="toast-container position-fixed bottom-0 end-0 p-3">
                     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                         <div class="toast-header">
-                            <img src="/imgs/icono.ico" class="rounded me-2" width="20" height="20">
+                            <img src="/img/icono.ico" class="rounded me-2" width="20" height="20">
                             <strong class="me-auto"></strong>
                             <small>Ahora</small>
                             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
