--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="toast-container position-fixed bottom-0 end-0 p-3">
                     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                         <div class="toast-header">
-                            <img src="/img/icono.ico" class="rounded me-2" width="20" height="20">
+                            <img src="img/icono.ico" class="rounded me-2" width="20" height="20">
                             <strong class="me-auto"></strong>
                             <small>Ahora</small>
                             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -159,11 +159,12 @@
         <hr class="border border-light border-2 opacity-40">
         <div class="row">
             <div class="col-lg-12">
+                <div class="input-group mt-2">
+                    <input type="text" class="form-control" placeholder="Buscar una transacción por nombre o proveedor" aria-label="Search" aria-describedby="search-addon" id="searchInput"/>
+                    <button onclick="searchData()" class="btn btn-success">Buscar</button>
+                </div>
+            <div class="table-responsive">
                 <table class="table table-dark table-hover" id="crudTable">
-                    <div class="input-group mt-2">
-                        <input type="text" class="form-control" placeholder="Buscar una transacción por nombre o proveedor" aria-label="Search" aria-describedby="search-addon" id="searchInput"/>
-                        <button onclick="searchData()" class="btn btn-success">Buscar</button>
-                      </div>
                     <thead>
                         <br>
                         <tr class="table table-dark table-hover">
@@ -179,6 +180,7 @@
                     </thead>
                     <tbody></tbody>
                 </table>
+            </div>
                 <div id="totalSumContainer" class="total-sum-container">
                     Suma total: <span id="totalSum">0</span>
                 </div>
