--- a/balance.html
+++ b/balance.html
@@ -2,23 +2,15 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="Gráfico de categorías">
     <meta name="author" content="Lextrack">
     <title>Gráfico de Categorías</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-    crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" href="img/icono.ico" />
     <link rel="stylesheet" href="css/main.css"/>
-    <style>
-        .chart-container {
-            position: relative;
-            width: 100%;
-            height: 80vh;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -27,9 +19,9 @@
                 <a href="index.html" class="btn btn-secondary btn-sm">
                     <i class="bi bi-arrow-left"></i> Volver
                 </a>
-                <button onclick="downloadChartAsPNG()" class="btn btn-sm btn-primary">
-                    <i class="bi bi-file-earmark-image"></i> Descargar en PNG
-                </button>
+                <button class="btn btn-sm btn-primary" id="downloadPNG">
+                    <i class="bi bi-download"></i> Descargar PNG
+                  </button>
                 <button id="downloadPDF" class="btn btn-sm btn-danger">
                     <i class="bi bi-file-earmark-pdf"></i> Descargar en PDF
                 </button>
@@ -53,6 +45,6 @@
     <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.13/dist/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.umd.js.map"></script>
-    <script src="js/balance.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
