--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="Registro de transacciones">
     <meta name="author" content="Lextrack">
     <title>Gestor de transacciones</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-    crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" href="img/icono.ico" />
     <link rel="stylesheet" href="css/main.css"/>
@@ -34,7 +32,7 @@
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Precio</label>
                     <input type="text" name="precio" class="form-control" 
-                    id="precio" value="0" oninput="formatInputPrice(this)">                    
+                    id="precio" value="0">                   
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Proveedor</label>
@@ -114,7 +112,7 @@
                 <input type="hidden" name="categoria" id="categoria">
 
                 <div class="col-lg-12 d-flex justify-content-between align-items-center">
-                    <button class="btn btn-success" id="Submit" onclick="AddData()">
+                    <button class="btn btn-success" id="Submit">
                         <i class="bi bi-file-plus"></i> Añadir Registro
                     </button>
                     <div>
@@ -201,6 +199,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
