--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Cantidad</label>
                     <input type="number" name="cantidad" class="form-control" 
-                    id="cantidad" value="0">
+                    id="cantidad">
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Precio</label>
                     <input type="text" name="precio" class="form-control" 
-                    id="precio" value="0">                   
+                    id="precio">                   
                 </div>
                 <div class="form-group col-md-6 mb-3">
                     <label for="name">Proveedor</label>
