--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Gestor de transacciones</title>
     
     <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#198754">
     
     <!-- Apple Touch Icon -->
